QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog


GIT HEAD

- Fixed Setup dialog Cancel (or close) behavior when
  Settings > Parameters > Frames/Period (aka. buffer-
  size) it's the only setting that's changed.

- Early fixing to build for Qt >= 5.15.0.

  
0.6.2  2020-03-24  A Spring'20 Release.

- A scalable (.svg) icon version has been added.

- Make man page compression reproducible (after request
  by Jelle van der Waa, while on the Vee-Ones, thanks).

- Ditching deprecated QTime methods for QElapsedTimer's
  (in compliance to Qt >= 5.14.0).

- Bumped copyright headers into the New Year (2020).


0.6.1  2019-12-22  The Winter'19 Release.

- Custom color (palette) theme editor introduced; color
  (palette) theme changes are now effective immediately,
  except on default.

- Second attempt to fix the yet non-official though
  CMake build configuration.

- When using autotools and ./configure --with-qt=...,
  it is also necessary to adjust the PKG_CONFIG_PATH
  environment variable (after a merge request by plcl
  aka. Pedro López-Cabanillas, while on qmidinet,
  thanks).


0.6.0  2019-10-17  An Autumn'19 Release.

- Graph: avoid self-connecting over their own ports
  when client nodes are selected as a whole group;
  also try to match port-types in a oderly fashion
  when connecting multiple selected ports.

- Changing current JACK buffer size from Setup dialog
  (cf. Settings / Frames/Period) may now take effect
  just immediately ;)

- An 'Apply' button as been added to the Setup dialog;
  ask whether to restart the JACK audio server, if any
  settings are changed.

- Added alternate yet non-official CMake build option.

- Fix HiDPI display screen effective support (Qt >= 5.6).

- Command line arguments (--start, --preset=[label] and
  --active-patchbay=[path]) are passed and take effect
  on the current singleton/unique application instance,
  when enabled and already running.
